# any-doc-to-md

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter-installation-failure.yml  conversion-quality-bug.yml
.github/workflows/: ci.yml
docs/: adapter-guide.md  adapter-integration-tests.md  agent-conversion-guide.md  benchmark-reproduction.md  dependency-license-notes.md  learning-loop.md  llm-judge-setup.md  open-source-readiness.md  publishing.md  release-support-matrix.md  troubleshooting.md
docs/benchmarks/: adapter-corpus-2026-04-23.md  public-fixture-corpus-2026-04-27.md
docs/progress/: 20260527.md  20260609.md  20260610.md  20260612.md
docs/releases/: 0.1.0-github-release-notes.md  0.1.0-release-checklist.md  maintainer-runbook-template.md  testpypi-execution-checklist.md
docs/specs/: local-llm-benchmark.md  multi-method-converter-tournament.md
examples/benchmark-corpus/: README.md  field-note.txt  ops-brief.txt  row-sliced-note.txt
examples/quickstart/: field-note.txt
src/anydoc2md/: __init__.py  __main__.py  _llm_judge_client.py  _llm_judge_parsing.py  _llm_judge_pdf_issue_aggregation.py  _llm_judge_pdf_issue_localizer.py  _llm_judge_pdf_issue_reviewer.py  _llm_judge_pdf_windows.py  _llm_judge_prompting.py  _llm_judge_rate_limit.py  _llm_judge_types.py  cli.py  converter_benchmark_matrix.py  find_judge.py  find_judge_args.py  find_judge_provider.py  find_judge_report.py  find_judge_stage.py  find_judge_support.py  fix_application.py  judge_benchmark_cost.py  judge_benchmark_cost_report.py  (+17 more)
tests/: __init__.py  _llm_judge_helpers.py  test_classify_document.py  test_cli.py  test_converter_adapters.py  test_converter_benchmark_matrix.py  test_find_judge.py  test_find_judge_cli.py  test_find_judge_provider_cli.py  test_fix_application.py  test_hard_gates.py  test_html_converter.py  test_image_utils.py  test_judge_benchmark_cost.py  test_judge_pdf_concurrency_benchmark.py  test_judge_probe_freeform.py  test_learning_loop.py  test_llm_judge.py  test_llm_judge_decisions.py  test_llm_judge_parsing.py  test_llm_judge_pdf_issue_localizer.py  test_llm_judge_pdf_issue_reviewer.py  test_llm_judge_prompting.py  test_llm_judge_providers.py  test_llm_judge_windowed.py  test_output_qa_checks.py  test_output_qa_paragraph_fragmentation.py  test_output_qa_result.py  test_paragraph_repair_application.py  test_paragraph_repair_artifact_cleanup.py  test_paragraph_repair_detector.py  test_paragraph_repair_e2e.py  test_paragraph_repair_markdown_blocks.py  test_paragraph_repair_model.py  test_paragraph_repair_quality.py  test_paragraph_repair_repairer.py  test_paragraph_repair_staging_application.py  test_path_hygiene.py  test_pdf_converter_refactor.py  test_pdf_tables.py  (+12 more)
(+47 files in other folders)
