[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "any-doc-to-md"
version = "0.1.0"
description = "Document-to-Markdown conversion, QA, and tournament selection helpers."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Agent Cognitive Enterprise" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyMuPDF",
  "PyYAML",
  "beautifulsoup4",
  "requests",
]

[project.scripts]
anydoc2md = "anydoc2md.cli:main"
anydoc2md-find-judge = "anydoc2md.find_judge:main"
anydoc2md-benchmark-matrix = "anydoc2md.converter_benchmark_matrix:main"

[project.optional-dependencies]
test = [
  "pytest",
  "Pillow",
  "python-docx",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anydoc2md = ["probe_assets/*"]
